chore: update public route logic and cleanup local config